--- a/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex
@@ -6,11 +6,11 @@ Om een Canvas.hs-applicatie te schrijven moeten we een handlerfunctie schrijven 
 Binnen deze handleiding zullen een aantal termen gebruikt worden, deze worden hieronder gedefinieerd.
 \begin{itemize}
 	\item Output
-De programmeur is verandwoorderlijk voor het produceren van output, meestal zal de programmeur een Shape en een lijst van Actions geven maar ook een BlockingAction is mogelijk.
+De programmeur is verantwoordelijk voor het produceren van output, meestal zal de programmeur een Shape en een lijst van Actions geven maar ook een BlockingAction is mogelijk.
 	\item[Shape]
 Binnen Canvas.hs is vrijwel alles een shape, maar binnen deze handleiding zal er onderscheid gemaakt worden tussen primaire shapes (Circle, Rect, etc.), containers (een shape die een aantal kinderen heeft) of modifiers (bewerkingen op een shape).
 	\item[Modifiers]
-Modifiers zijn bewerkingen op een Shape, zo is Rotate een modifier. Karaktiristiek aan een modifier is dat het als argument een shape neemt.
+Modifiers zijn bewerkingen op een Shape, zo is Rotate een modifier. Karakteristiek aan een modifier is dat het als argument een shape neemt.
 	\item[Containers]
 Containers zijn shapes die meerdere shapes kunnen bevatten, zo kan de programmeur elementen groeperen.
 	\item[Action]
