--- a/Hoofdstukken/ontwerp/detail/module.tex
+++ b/Hoofdstukken/ontwerp/detail/module.tex
@@ -21,7 +21,7 @@ De server draait in het proces dat gestart wordt vanuit de Haskell-code van de p
 \begin{figure}
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/module_startup_procedure_interaction.pdf}
-\caption{De opstartprocedure en initiele interactiesequentie}
+\caption{De opstartprocedure en initi\"ele interactiesequentie}
 \label{fig:startup_procedure}
 \end{center}
 \end{figure}
