--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -38,7 +38,7 @@ Bij scrum wordt gebruikt gemaakt van sprints. Dit zijn korte termijnen van --in 
 
 Bij aanvang van een nieuwe fase wordt een planning gemaakt op basis van de taken in de project backlog. De prioriteit per taak wordt aangegeven door de \emph{product owner}, in ons geval de opdrachtgever. De teamleden bepalen vervolgens tijdens de sprintbespreking hoeveel van deze taken uitgevoerd kunnen worden in de komende sprint en verplaatsen deze naar het sprint backlog.
 
-Bij elke samenkomst wordt een \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna vertelt het teamlid waar hij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt. Door deze updates kan de scrum master bijhouden of de planning van de huidige sprint haalbaar is of dat er ingegrepen moet worden.
+Bij elke samenkomst wordt een \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna vertelt het teamlid waar hij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet korte termijn doel stelt. Door deze updates kan de scrum master bijhouden of de planning van de huidige sprint haalbaar is of dat er ingegrepen moet worden.
 
 \section{Technische organisatie} \label{sec:technische_organisatie}
 Bij het bouwen van software met een groep is het belangrijk dat elke ontwikkelaar zich kan concentreren op de feature die hij aan het ontwikkelen is. Idealiter hoeft er geen rekening gehouden te worden met andere features die door anderen ontwikkeld worden. Er is daarom gekozen om gebruik te maken van het gedistribueerde versiebeheer systeem \emph{Git} met een centrale repository op GitHub.
@@ -81,7 +81,7 @@ Om het beoordelen van code gemakkelijk te maken, is er gebruik gemaakt van de \e
 \end{center}
 \end{figure}
 
-Informatie over het resultaat van een build kan gebruikt worden bij het boordelen van een pull request. Als een beoordelaar ziet dat de build uit een pull request succesvol is, heeft hij een goede indicatie dat de pull request veilig gemerged kan worden.
+Informatie over het resultaat van een build kan gebruikt worden bij het beoordelen van een pull request. Als een beoordelaar ziet dat de build uit een pull request succesvol is, heeft hij een goede indicatie dat de pull request veilig gemerged kan worden.
 
 Het buildscript voert naast de compilatie nog een paar functies uit. Zo genereert het buildscript ook de documentatie en uploadt het buildscript deze naar de Canvas.hs website, \url{http://canvashs.github.io}. Op de website kan de documentatie bekeken worden per build. Hierdoor hoeven ontwikkelaars zelf geen documentatie meer te genereren en hebben zij altijd de laatste documentatie.
 
