--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -19,7 +19,7 @@ Canvas.hs is bedoeld als vervanging voor de vorige omgeving die bij het vak Func
 \subsubsection{Image type}
 Canvas.hs ondersteunt een breed scala aan grafische primitieven, zo goed als alle vectortekeningen zijn te maken met deze library. Helaas mist er ondersteuning voor plaatjes, zo kan de gebruiker bijvoorbeeld geen fotoalbum in Haskell/Canvas.hs schrijven.
 
-Het toevoegen van een \inlinecode{Image} type is daarentegen redelijk triviaal, al zal er nog wel over peformance nagedacht moeten worden. De eerste optie is dat de gebruiker de afbeelding inleest (middels de \inlinecode{LoadFileBinary}) en vervolgens een \inlinecode{Image} node toevoegt die als argument een ByteString neemt, en dit aanbiedt aan Canvas.hs. Een andere optie is de afbeelding te serveren vanuit de server, de gebruiker moet dan de afbeelding in een bepaalde map zetten, de webserver serveert de image dan op een statische manier.
+Het toevoegen van een \inlinecode{Image} type is daarentegen redelijk triviaal, al zal er nog wel over performance nagedacht moeten worden. De eerste optie is dat de gebruiker de afbeelding inleest (middels de \inlinecode{LoadFileBinary}) en vervolgens een \inlinecode{Image} node toevoegt die als argument een ByteString neemt, en dit aanbiedt aan Canvas.hs. Een andere optie is de afbeelding te serveren vanuit de server, de gebruiker moet dan de afbeelding in een bepaalde map zetten, de webserver serveert de image dan op een statische manier.
 
 Een groot nadeel aan de eerste methode is dat het plaatje steeds opnieuw naar base64 gedecodeerd moet worden, en over de socket gestuurd moet worden. Verder moet de gebruiker de bytestring van het plaatje bewaren, ander zou die steeds opnieuw ingeladen moeten worden. De tweede methode is flexibeler, Canvas.hs stuurt alleen een locatie op naar de client, en de client kan zelfs cachen waar de foto opgeslagen is. Helaas betekent dit wel dat de gebruiker de foto waarschijnlijk in een specifiek mapje moet plaatsen.
 
@@ -31,16 +31,16 @@ Binnen Canvas.hs kan tot op heden alleen met vaste keuren gevuld worden, voor he
 \subsubsection{Grafische toolkit}
 Canvas.hs is voornamelijk een tekenlibrary, de library ondersteunt het tekenen van primitieve figuren. Voor een echte gebruikersinterface is een grafische toolkit noodzakelijk die een set standaard elementen (widgets) bevat (knoppen, invoervelden, vensters etc.). Het voornaamste voordeel van een grafische toolkit is dat er geen rekening gehouden moet worden met event en dat de toolkit zelf bijhoud welk element focus heeft. Sommige demo's pogen widgets te gebruiken (zoals nederland\_demo), maar hierin zitten vaak fouten of events die niet afgevangen worden, daartoe is het handig al deze code te centraliseren en te abstraheren voor de gebruiker.
 
-Er is een aanzet gemaakt voor een grafische toolkit in \url{https://www.github.com/Canvas.hs/Widgets.hs} maar dit is in een vroeg stadium vastgelopen. Het idee echter was een nieuwe handler definitie die zichzelf tussen de library en de code van de gebruiker plaatsts, deze handler bekijkt voordat de gebruiker events kijkt eerst of een event op een widget was en gooit dan vervolgens een widgetspecifiek event. Daarnaast hoeven alleen definities gemaakt te worden voor widgets en kan de gebruiker voor de rest zonder Canvas.hs te recompilen gebruikmaken van de nieuwe widgets.
+Er is een aanzet gemaakt voor een grafische toolkit in \url{https://www.github.com/Canvas.hs/Widgets.hs} maar dit is in een vroeg stadium vastgelopen. Het idee echter was een nieuwe handler definitie die zichzelf tussen de library en de code van de gebruiker plaatst, deze handler bekijkt voordat de gebruiker events kijkt eerst of een event op een widget was en gooit dan vervolgens een widgetspecifiek event. Daarnaast hoeven alleen definities gemaakt te worden voor widgets en kan de gebruiker voor de rest zonder Canvas.hs te recompilen gebruikmaken van de nieuwe widgets.
 
 Wel zal er goed nagedacht moeten worden over hoe meerdere handlers met elkaar communiceren, wat nou als er zowel een WidgetHandler als een GraphHandler geschreven wordt? En daarnaast moet ook goed bekeken worden hoe de output van de widgets samengevoegd wordt met die van de gebruiker, is het de verantwoordelijkheid van de gebruiker om widgets te tekenen of voegt de library zelf zijn output in.
 
 \subsubsection{Delta updates} \label{subsub:deltas}
-Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteerd de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in Javascript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is.
+Op dit moment wordt de client behandeld alsof het stateless is, de module stuurt na elke verandering de hele grafische boom op en de client gooit zijn hele interne boom weg en accepteert de nieuwe. Deze manier van werken is vanuit een Haskell oogpunt logisch, maar door het gebrek aan caching is het in JavaScript traag. Daartoe is het handig om delta updates te sturen, zo kan er opgestuurd worden dat een rondje drie keer zo groot geworden is.
 
 \subsubsection{FPprac module}
-Binnen het vak Functioneel Programmeren (FP) wordt tot op heden gebruik gemaakt van een module die Prelude vervangt. Binnen Haskell is er een stricte scheiding tussen gehele getallen en natuurlijke getallen, zo is een integer niet persé deelbaar door een andere integer. Voor FP is ervoor gekozen om een \inlinecode{Number} datatype te maken die deze lijn vervaagd, zo kan de gebruiker ongestoord twee integers door elkaar delen, en wordt in de FPPrac module een conversie gedaan naar getalrepresentaties die wel deelbaar zijn.
+Binnen het vak Functioneel Programmeren (FP) wordt tot op heden gebruik gemaakt van een module die Prelude vervangt. Binnen Haskell is er een strikte scheiding tussen gehele getallen en natuurlijke getallen, zo is een integer niet persé deelbaar door een andere integer. Voor FP is ervoor gekozen om een \inlinecode{Number} datatype te maken die deze lijn vervaagd, zo kan de gebruiker ongestoord twee integers door elkaar delen, en wordt in de FPPrac module een conversie gedaan naar getalsrepresentaties die wel deelbaar zijn.
 
-Binnen Canvas.hs worden echter gewone Int's, Float's etc gebruikt, en hier en daar ook een functie uit Prelude. Omdat FPPrac zijn eigen prelude exporteerd met functies voor hun \inlinecode{Number} klasse moeten er tussenfuncties geschreven worden die het voor de gebruiker mogelijk maken om toch de functies van Canvas.hs aan te kunnen roepen met \inlinecode{Number}'s. Deze taak is eenvoudig, maar het zal moeten gebeuren om compatible te blijven met het huidige Functioneel Programmeren practicum.
+Binnen Canvas.hs worden echter gewone Int's, Float's etc gebruikt, en hier en daar ook een functie uit Prelude. Omdat FPPrac zijn eigen prelude exporteert met functies voor hun \inlinecode{Number} klasse moeten er tussenfuncties geschreven worden die het voor de gebruiker mogelijk maken om toch de functies van Canvas.hs aan te kunnen roepen met \inlinecode{Number}'s. Deze taak is eenvoudig, maar het zal moeten gebeuren om compatible te blijven met het huidige Functioneel Programmeren practicum.
 
-Daarnaast zal de handleiding en het materiaal van Functioneel Programeren gewijzigd moeten worden naar Canvas.hs, veel van de primitieven en modifiers zijn hetzelfde als die van Gloss maar hebben net andere parameters, de twee API's zijn niet uitwisselbaar helaas.
+Daarnaast zal de handleiding en het materiaal van Functioneel Programmeren gewijzigd moeten worden naar Canvas.hs, veel van de primitieven en modifiers zijn hetzelfde als die van Gloss maar hebben net andere parameters, de twee API's zijn niet uitwisselbaar helaas.
